--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -63,6 +63,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
+        android:id="@+id/btnTry"
         android:layout_width="204dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
@@ -73,4 +74,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvProcent" />
 
+    <TextView
+        android:id="@+id/text"
+        android:textColor="@color/black"
+        android:text="Text"
+        app:layout_constraintTop_toBottomOf="@id/tvMe"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="108dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
